@@ -16,6 +16,8 @@ Version 1.4.23 - SVN
     do_hook_function (plugin authors please note)
   - Always ensure that the Reply-To header is a full email address in
     outgoing messages
+  - Fixed issue with Noselect mailboxes being clickable in folder list
+  - Made performance improvements in mailbox listing
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
